cambie el color

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .post {
-    border: solid red;
+    border: solid black;
     background-color: white;
     margin-left: 35%;
     margin-right: 44%;
